# NF2

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  INSTALL.md  MANIFEST.in  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
applications/: AR13664.md
conda-recipe/: meta.yaml
config/: 2106_AR.json  2173.json  2173_full_disc.json  2173_submap.json  2173_synoptic_ref.json  377_az.json  analytical_0_16.json  analytical_0_32.json  analytical_0_8.json  analytical_0_8_16.json  analytical_0_8_16_32.json  analytical_1tau.json  analytical_2tau.json  analytical_2tau_Bz.json  analytical_3tau.json  analytical_3tau_Bz.json  analytical_4tau.json  analytical_4tau_Bz.json  analytical_full.json  analytical_open.json  analytical_potential.json  demo_submap.json  demo_synoptic.json  fd_2106.json  fd_2106_subframe_vp.json  fd_2106_vp.json  fd_2154.json  fd_2154_az.json  fd_2154_radial.json  fd_2154_vp.json  fd_2154_vp_series.json  fd_2173.json  fd_2173_potential_test.json  fd_2173_radial.json  fd_2173_radial_vp.json  fd_2173_synoptic.json  fd_2173_vp.json  fd_2173_vp_series.json  fd_2213_synoptic.json  fd_2266.json  (+30 more)
config/13229/: ensemble.yaml  init.yaml  init_v02.yaml  post_eruption.yaml  series.yaml
config/13664/: init_1.yaml  init_2.yaml  series_1.yaml  series_2.yaml
config/dkist/: 6173.yaml  6173_multi_height.yaml
config/hinode/: ar_10978_0.01.yaml  ar_10978_0.01_w0.1.yaml  ar_10978_0.01_w0.5.yaml  ar_10978_0.05.yaml  ar_10978_0.05_w0.1.yaml  ar_10978_0.05_w0.5.yaml  ar_10978_0.10.yaml  ar_10978_0.10_w0.01.yaml  ar_10978_0.10_w0.1.yaml  ar_10978_0.10_w0.1_forcedBz.yaml  ar_10978_0.10_w0.5.yaml
config/magnetostatic/: cutoff.yaml  force_free.yaml  pressure_boundary.yaml  pressure_full_cube.yaml  scaling.yaml  standard.yaml  transfer.yaml
config/muram_example/: x_flare.yaml  x_flare_series.yaml
config/nlte/: hmi.yaml  sst_nlte.yaml  sst_tau0.yaml  sst_tau0_tau-2.yaml  sst_tau0_tau-5.yaml
config/scaling/: 11515.yaml  377.yaml
config/sharp/: 377.yaml  377_series.yaml  iswat_AR12760.yaml
config/spherical/: 2154.yaml  2173.yaml  2173_free.yaml  2173_full.yaml  2173_insert.yaml  2173_post.yaml  2173_series.yaml  2173_subframe.yaml  2173_synoptic.yaml  2267.yaml  2267_post_eruption.yaml  2267_subframe.yaml  2283_00.yaml  2283_04.yaml  377_embedded.yaml  377_potential.yaml  377_scaled.yaml  377_spherical.yaml  377_subframe.yaml  synoptic.yaml
config/sst/: 7310.yaml  7310_hmi.yaml
config/synoptic/: synoptic_series.json  template.json
config_yaml/13229/: ensemble.yaml  init.yaml  init_v02.yaml  post_eruption.yaml  series.yaml
config_yaml/13664/: init_1.yaml  init_2.yaml  series_1.yaml  series_2.yaml
config_yaml/AR13392/: 13392_0851_1slices.yaml  13392_0851_2slices.yaml  13392_0851_3slices.yaml  sharp_13392.yaml  (+4 more)
docs/: analytical.md  api.md  architecture.md  cartesian.md  conf.py  configuration.md  configuration_catalog.md  coordinates.md  dataset_catalog.md  deployment.md  developer.md  downloads.md  evaluation.md  examples.md  export.md  exporting.md  extrapolations.md  faq.md  generate_reference.py  geometries.md  index.md  installation.md  losses_and_transforms.md  metrics.md  migration.md  notebooks.md  publications.md  quickstart.md  reference.md  requirements.txt  series.md  spherical.md  training.md  usage.md
example/: extrapolation.ipynb
examples/: README.md
nf2/: __init__.py  ar_extrapolate.py  export.py  extrapolate.py  extrapolate_global.py  extrapolate_multi_height.py  extrapolate_series.py  metrics.py  module.py  reference.py  series_extrapolate.py
notebooks/: 01_Quickstart_Analytical_Extrapolation.ipynb  02_Quickstart_SHARP_By_Date.ipynb  03_Quickstart_Spherical_By_Date.ipynb  04_Open_Sample_Checkpoint.ipynb  EVAL_demo.ipynb  HDF5_demo.ipynb  NF2_SHARP_extrapolation.ipynb  NF2_convert.ipynb  NF2_custom_extrapolation.ipynb
scripts/: download.sh  download_2154.sh  evaluate_series.sh  extrapolate.sh  magnetostatic.sh  nf2_analytical.sh  nf2_to_vtk.sh  scaling.sh  series.sh
tests/: test_cartesian_series.py  test_config.py  test_output_metrics.py  test_random_sampler_defaults.py  test_spherical_series.py  test_wandb_image_logging.py
(+432 files in other folders)
